# CSoketLSO

./: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  database-docker-compose.yml  docker-compose.yml  globals.c  globals.h  handle_client.c  handle_room.c  handle_room.h  main.c
.devcontainer/: devcontainer.json
data/: client.h  player.c  player.h  request.h  room.c  room.h
docker/: Dockerized-CSocketLSO.yml  LSOProject  README.md  database.yml  dockerfile
docker/Dockerized-CSocketLSO/: LSOProject  README.md  dockerfile
json/: formatter.c  formatter.h
lib/libpq-standalone/: README.md
lib/libpq-standalone/cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
lib/libpq-standalone/libpq/: CMakeLists.txt  pg_config.h.in  pg_config_win32.h
lib/libpq-standalone/libpq/include/: pg_config_paths.h
lib/libpq-standalone/test/: CMakeLists.txt
lib/multicast/: CMakeLists.txt  multicast.h  multicast_recv.c  multicast_send.c
libpq-standalone/: CMakeLists.txt
libpq-standalone/libpq/: pg_config_linux_x64.h  pg_config_macos.h
libpq-standalone/scripts/: update-libpq-sources.sh
libpq-standalone/test/: libpq_version.c
multicast/: multicast_defs.h
src/: config.h  globals.c  handle_client.c  handle_client.h  handle_player.c  handle_player.h  handle_room.c  handle_room.h  main.c
src/data/: client.h  player.c  player.h  request.h  response.h  room.c  room.h  user.h
src/json/: formatter.c  formatter.h
